data/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>This is the standard support process for the company</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Still Working</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Id_for_lookup__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id (for lookup)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Button__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=015j0000000srpR&amp;oid=00D1F0000000Zyf&quot;, &quot;Add Options&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Options__c</fullName>
        <formula>HYPERLINK(&quot;/flow/Tip_Calculator?varAccountId=&quot; + AccountId,&quot;Add Options&quot;)</formula>
        <label>Add Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Functional_Group__c</fullName>
        <description>Based on Case Creator&apos;s profile this value will be set to Sales, Marketing or General;
Old defaule: CASE(CreatedBy.Profile.Name, &quot;Standard User&quot;, &quot;Sales&quot;, &quot;Marketing User&quot;, &quot;Marketing&quot;, &quot;General&quot;)</description>
        <formula>$Setup.User_Functional_Group__c.Functional_Group__c</formula>
        <inlineHelpText>Based on Case Creator&apos;s profile this value will be set to Sales, Marketing or General</inlineHelpText>
        <label>Creator Functional Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities_When_Case_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Opportunities for the Account when the Case was created.</description>
        <inlineHelpText>Count of Opportunities for the Account when the Case was created.</inlineHelpText>
        <label>Open Opportunities When Case Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Amount__c</fullName>
        <label>Reimbursement Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Inbound_Telesales_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Inbound Telesales</label>
        <queue>Inbound_Telesales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>This is a General Inquiry Case</description>
        <label>General Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>This is a Product Inquiry Record Type</description>
        <label>Product Inquiry</label>
    </recordTypes>
    <validationRules>
        <fullName>Reimbursement_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Reimbursement_Amount__c &gt; 1000</errorConditionFormula>
        <errorDisplayField>Reimbursement_Amount__c</errorDisplayField>
        <errorMessage>Reimbursement Amount cannot be greater than $1000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_This</fullName>
        <active>false</active>
        <errorConditionFormula>IsClosed</errorConditionFormula>
        <errorMessage>Don&apos;t close</errorMessage>
    </validationRules>
</CustomObject>